# pretty-git-prompt

./: .gitignore  .packit.yaml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  rust-pretty-git-prompt.spec
files/: .bashrc  .zshrc  demo.py  pretty-git-prompt.yml.bash  pretty-git-prompt.yml.zsh
hack/: build.sh  ci.sh
src/: backend.rs  cli.rs  conf.rs  constants.rs  format.rs  main.rs  models.rs  util.rs
tests/functional/: zsh.sh
tests/integration/: test_this.py  utils.py
