[package]
name = "pretty-git-prompt"
version = "0.2.1"
authors = ["Tomas Tomecek <tomas@tomecek.net>"]
description = "Your current git repository information inside a beautiful shell prompt."
license-file = "LICENSE"
documentation = "https://github.com/TomasTomecek/pretty-git-prompt/blob/master/README.md"
homepage = "https://github.com/TomasTomecek/pretty-git-prompt"
repository = "https://github.com/TomasTomecek/pretty-git-prompt"

[[bin]]
bench = false
path = "src/main.rs"
name = "pretty-git-prompt"

[dependencies]
yaml-rust = "0.4.2"

[dependencies.clap]
version = "2.19"
default-features = false

[dependencies.git2]
version = "0.13"
default-features = false
features = []
