[package]
name = "pretty-git-prompt"
version = "0.2.2"
authors = ["Tomas Tomecek <tomas@tomecek.net>"]
description = "Your current git repository information inside a beautiful shell prompt."
license = "MIT"
documentation = "https://github.com/TomasTomecek/pretty-git-prompt/blob/master/README.md"
homepage = "https://github.com/TomasTomecek/pretty-git-prompt"
repository = "https://github.com/TomasTomecek/pretty-git-prompt"

[[bin]]
bench = false
path = "src/main.rs"
name = "pretty-git-prompt"

[dependencies]
yaml-rust = "0.4.5"

[dependencies.clap]
version = "4.*"
default-features = false
features = ["std", "cargo"]

[dependencies.git2]
version = "0.18"
default-features = false
features = []
